# work_orchestrator

./: .gitignore  .mcp.json  CLAUDE.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: greet.sh  start-dashboard.sh
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AgentMonitor.tsx  ChatPage.tsx  DashboardPage.tsx  Layout.tsx  ProjectsPage.tsx  TaskCard.tsx  WorktreePanel.tsx
frontend/src/hooks/: useApi.ts  useWebSocket.ts
frontend/src/types/: index.ts
src/work_orchestrator/: __init__.py  cli.py  config.py
src/work_orchestrator/backends/: __init__.py  claude_code.py  opencode.py  pi_agent.py
src/work_orchestrator/core/: agents.py  events.py  memory.py  planner.py  project_context.py  projects.py  specs.py  tasks.py  worktrees.py
src/work_orchestrator/db/: engine.py  models.py
src/work_orchestrator/integrations/: git.py  slack.py
src/work_orchestrator/mcp/: prompts.py  server.py
src/work_orchestrator/web/: app.py  dashboard.py
tests/: test_agents.py  test_backends.py  test_cli.py  test_planner.py  test_tasks.py  test_web.py  test_worktrees.py
