[project]
name = "work-orchestrator"
version = "0.1.0"
description = "AI dev workflow orchestrator with Git worktrees, tasks, and Slack"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "slack-sdk>=3.27.0",
    "click>=8.1.0",
]

[project.scripts]
wo = "work_orchestrator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/work_orchestrator"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.3.0",
]
